i think we got the autocomplete part done finally

--- a/src/bot.html
+++ b/src/bot.html
@@ -10,6 +10,7 @@
 <body>
 
 <script src="botchat.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOv4N527oPcQv88xxMKEILQuQ4Y0CcgG0&libraries=places"></script>
 <script>
     (function(){
         var element = document.createElement("link");
