--- a/src/bot.html
+++ b/src/bot.html
@@ -10,6 +10,7 @@
 <body>
 
 <script src="botchat.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOv4N527oPcQv88xxMKEILQuQ4Y0CcgG0&libraries=places"></script>
 <script>
     (function(){
         var element = document.createElement("link");
@@ -23,12 +24,12 @@
         document.body.appendChild(element);
 
         BotChat.App({
-          //  directLine: { secret: 'MJfotakCJ8o.cwA.LJ0.XkTaI6IN_olmht0LpHqDMeWWqS9whgLdQLo1cj0xMW4' },
-          //  gid: 'https://gideon-dev.herokuapp.com'
+           directLine: { secret: 'MJfotakCJ8o.cwA.LJ0.XkTaI6IN_olmht0LpHqDMeWWqS9whgLdQLo1cj0xMW4' },
+           gid: 'https://gideon-dev.herokuapp.com'
         //   directLine: { secret: 'GaRM_zwyAjE.cwA.Bfo.n1taE5VMAn6YvZ1UtFDx3p5VFayw9TFfBxa12GIBENA' },
         //   gid: 'https://gideon-prod.herokuapp.com'
-          directLine: { secret: 'tKZgVlG3KDw.cwA.dCc.CV65hJS12Vc-2k0-mTNjmd-O7_hrlp5PrZQfvNiUTcQ' },
-          gid: 'http://localhost:3000'
+          // directLine: { secret: 'tKZgVlG3KDw.cwA.dCc.CV65hJS12Vc-2k0-mTNjmd-O7_hrlp5PrZQfvNiUTcQ' },
+          // gid: 'http://localhost:3000'
             
         }, document.getElementById("bot"));
     })();
