revert directline secret
This reverts commit 4741b813399b589d04f9e0854ad3c21cc2923535.

--- a/src/bot.html
+++ b/src/bot.html
@@ -28,7 +28,7 @@
            //gid: 'https://gideon-dev.herokuapp.com'
         //   directLine: { secret: 'GaRM_zwyAjE.cwA.Bfo.n1taE5VMAn6YvZ1UtFDx3p5VFayw9TFfBxa12GIBENA' },
         //   gid: 'https://gideon-prod.herokuapp.com'
-            directLine: { secret: 'tKZgVlG3KDw.cwA.dCc.CV65hJS12Vc-2k0-mTNjmd-O7_hrlp5PrZQfvNiUTcQ' },
+          directLine: { secret: '81qHm4AsWPQ.zdoc-TCwcvAZUNyO1cL6FVBIRAynG2APjtBS0nBFHNg' },
            gid: 'http://localhost:3000'
             
         }, document.getElementById("bot"));
