--- a/src/bot.html
+++ b/src/bot.html
@@ -28,8 +28,8 @@
            //gid: 'https://gideon-dev.herokuapp.com'
         //   directLine: { secret: 'GaRM_zwyAjE.cwA.Bfo.n1taE5VMAn6YvZ1UtFDx3p5VFayw9TFfBxa12GIBENA' },
         //   gid: 'https://gideon-prod.herokuapp.com'
-          directLine: { secret: '81qHm4AsWPQ.zdoc-TCwcvAZUNyO1cL6FVBIRAynG2APjtBS0nBFHNg' },
-           gid: 'http://localhost:3000'
+          directLine: { secret: 'tKZgVlG3KDw.cwA.WBM.jJW_J9fFziICAwAEPSu12JtjV1OueGyd4MhyUUxMuyw' },
+           gid: 'http://localhost:5000'
             
         }, document.getElementById("bot"));
     })();
